--- a/changelog.txt
+++ b/changelog.txt
@@ -1,121 +1,10 @@
 Patchnotes [1.0.0]:
 
 General:
-- added Zombie Outfit "LIC_Generic1"
-- added Thong variants to female zombie underwear
-- added Cropped Tanktop [Black]
-- added Cropped Tanktop [White]
-- added Lowrise Micro Shorts [Blue]
-- added Lowrise Micro Shorts [Military]
-- added Push-Up Bra [Blue]
-- added Push-Up Bra [Dark Blue]
-- added Push-Up Bra [Light Blue]
-- added Push-Up Bra [Brown]
-- added Push-Up Bra [Dark Brown]
-- added Push-Up Bra [Light Brown]
-- added Push-Up Bra [Cyan]
-- added Push-Up Bra [Dark Cyan]
-- added Push-Up Bra [Light Cyan]
-- added Push-Up Bra [Green]
-- added Push-Up Bra [Dark Green]
-- added Push-Up Bra [Light Green]
-- added Push-Up Bra [Grey]
-- added Push-Up Bra [Dark Grey]
-- added Push-Up Bra [Light Grey]
-- added Push-Up Bra [Orange]
-- added Push-Up Bra [Dark Orange]
-- added Push-Up Bra [Light Orange]
-- added Push-Up Bra [Pink]
-- added Push-Up Bra [Dark Pink]
-- added Push-Up Bra [Light Pink]
-- added Push-Up Bra [Purple]
-- added Push-Up Bra [Dark Purple]
-- added Push-Up Bra [Light Purple]
-- added Push-Up Bra [Red]
-- added Push-Up Bra [Dark Red]
-- added Push-Up Bra [Light Red]
-- added Push-Up Bra [Yellow]
-- added Push-Up Bra [Dark Yellow]
-- added Push-Up Bra [Light Yellow]
-- added Strapless Bra [Blue]
-- added Strapless Bra [Dark Blue]
-- added Strapless Bra [Light Blue]
-- added Strapless Bra [Brown]
-- added Strapless Bra [Dark Brown]
-- added Strapless Bra [Light Brown]
-- added Strapless Bra [Cyan]
-- added Strapless Bra [Dark Cyan]
-- added Strapless Bra [Light Cyan]
-- added Strapless Bra [Green]
-- added Strapless Bra [Dark Green]
-- added Strapless Bra [Light Green]
-- added Strapless Bra [Grey]
-- added Strapless Bra [Dark Grey]
-- added Strapless Bra [Light Grey]
-- added Strapless Bra [Orange]
-- added Strapless Bra [Dark Orange]
-- added Strapless Bra [Light Orange]
-- added Strapless Bra [Pink]
-- added Strapless Bra [Dark Pink]
-- added Strapless Bra [Light Pink]
-- added Strapless Bra [Purple]
-- added Strapless Bra [Dark Purple]
-- added Strapless Bra [Light Purple]
-- added Strapless Bra [Red]
-- added Strapless Bra [Dark Red]
-- added Strapless Bra [Light Red]
-- added Strapless Bra [Yellow]
-- added Strapless Bra [Dark Yellow]
-- added Strapless Bra [Light Yellow]
-- added Thong [Black]
-- added Thong [White]
-- added Thong [Blue]
-- added Thong [Dark Blue]
-- added Thong [Light Blue]
-- added Thong [Brown]
-- added Thong [Dark Brown]
-- added Thong [Light Brown]
-- added Thong [Cyan]
-- added Thong [Dark Cyan]
-- added Thong [Light Cyan]
-- added Thong [Green]
-- added Thong [Dark Green]
-- added Thong [Light Green]
-- added Thong [Grey]
-- added Thong [Dark Grey]
-- added Thong [Light Grey]
-- added Thong [Orange]
-- added Thong [Dark Orange]
-- added Thong [Light Orange]
-- added Thong [Pink]
-- added Thong [Dark Pink]
-- added Thong [Light Pink]
-- added Thong [Purple]
-- added Thong [Dark Purple]
-- added Thong [Light Purple]
-- added Thong [Red]
-- added Thong [Dark Red]
-- added Thong [Light Red]
-- added Thong [Yellow]
-- added Thong [Dark Yellow]
-- added Thong [Light Yellow]
-- added Thong [Military]
-
-Changes:
-- female zombie underwear now includes new Bra variants & Thongs
-- updated Vanilla Standard Bra texture [Black]
-- updated Vanilla Standard Bra texture [White]
-- updated Vanilla Strapless Bra texture [Black]
-- updated Vanilla Strapless Bra texture [White]
-- renamed Vanilla Standard Bra texture [Black]
-- renamed Vanilla Standard Bra texture [White]
-- removed random colour tint variant of Vanilla Standard Bra
-- removed random colour tint variant of Vanilla Strapless Bra
-- removed RunSpeedModifier for Vanilla Fanny Pack
-- removed RunSpeedModifier for Vanilla Military Bag
-- increased WeightReduction for Vanilla Fanny Pack
-- increased WeightReduction for Vanilla Military Bag
-- increased Capacity for Vanilla Military Bag
+- added Raw Fish Jerky
+- added Fish Jerky
+- added Raw Bird Jerky
+- added Bird Jerky
 
 ----------------------------------------------------------------------------------------------------------------------------
 
